--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<html>
+    <body>
+        <table>
+            <tr>
+                <td><img src="logo.png"/></td>
+            </tr>
+        </table>
+    </body>
+</html>
