--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
 <html>
     <body>
-        <table>
+        <table width="100%">
             <tr>
-                <td><img src="logo.png"/></td>
+                <td width="33%"></td>
+                <td style="text-align: center"><img src="logo.png" width="100px" height="100px"/></td>
+                <td width="33%"></td>
+            </tr>
+            <tr>
+                <td width="33%"></td>
+                <td >Instalar para Android <a href="https://play.google.com/store/apps/details?id=alvarogalia.com.controlacceso" target="_blank"> Ir a Google Play Store</a></td>
+                <td width="33%"></td>
+            </tr>
+            <tr>
+                <td width="33%"></td>
+                <td >Instalar para iPhone
+                        <a href="itms-services://?action=downloadmanifest&url=manifest.plist">Instalar aplicacion</a>
+                </td>
+                <td width="33%"></td>
             </tr>
         </table>
     </body>
