--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
             </tr>
             <tr>
                 <td width="33%"></td>
-                <td >Instalar para Android <a href="https://play.google.com/store/apps/details?id=alvarogalia.com.controlacceso" target="_blank"> Ir a Google Play Store</a></td>
+                <td >Instalar para Android 
+                    <a href="https://play.google.com/store/apps/details?id=alvarogalia.com.controlacceso" target="_blank"> Ir a Google Play Store</a></td>
                 <td width="33%"></td>
             </tr>
             <tr>
                 <td width="33%"></td>
                 <td >Instalar para iPhone
-                        <a href="itms-services://?action=downloadmanifest&url=manifest.plist">Instalar aplicacion</a>
+                        <a href="itms-services://?action=download-manifest&url=manifest.plist" id="text"> Descargar para iPhone </a> 
                 </td>
                 <td width="33%"></td>
             </tr>
