--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
             <tr>
                 <td width="33%"></td>
                 <td >Instalar para iPhone
-                        <a href="itms-services://?action=downloadmanifest&url=https://alvarogalia.github.io/manifest.plist">Instalar aplicacion</a>
-                        <a href="itms-services://?action=download-manifest&url=https://alvarogalia.github.io/manifest.plist" id="text"> Téléchargez notre application </a> 
+                    <a href="itms-services://?action=download-manifest&url=https://alvarogalia.github.io/manifest.plist" id="text"> Instalar para iPhone </a> 
                 </td>
                 <td width="33%"></td>
             </tr>
