se actualiza version de android

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <tr>
                 <td width="33%"></td>
                 <td >Instalar para Android 
-                    <a href="https://play.google.com/store/apps/details?id=alvarogalia.com.controlacceso" target="_blank"> Ir a Google Play Store</a></td>
+                    <a href="ControlAcceso.apk"> Descargar APK</a></td>
                 <td width="33%"></td>
             </tr>
             <tr>
